# admin_auth0

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
admin_auth0/: auth0.py  authentication.py  urls.py  views.py
auth/: authentication.py  urls.py  views.py
