[tool.poetry]
name = "admin_auth0"
version = "0.1.2"
description = ""
authors = ["Serhii Lakodei <serhii.lakodei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "==0.10.0"
pyjwt = "^2.8.0"
django = "==4.2.3"
authlib = "^1.3.0"
twine = "^4.0.2"
build = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
